XAML Spy 的功能展示範例

--- a/XFXamlSpy/XFXamlSpy/XFXamlSpy.Droid/XFXamlSpy.Droid.csproj
+++ b/XFXamlSpy/XFXamlSpy/XFXamlSpy.Droid/XFXamlSpy.Droid.csproj
@@ -5,18 +5,18 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4CA0F075-D308-4D6D-8AC9-3623AEE21487}</ProjectGuid>
+    <ProjectGuid>{DF563008-5A54-42D5-A823-2A04E4E115EF}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XFListViewRefresh.Droid</RootNamespace>
-    <AssemblyName>XFListViewRefresh.Droid</AssemblyName>
+    <RootNamespace>XFXamlSpy.Droid</RootNamespace>
+    <AssemblyName>XFXamlSpy.Droid</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidApplication>true</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
-    <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
+    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
     <AndroidSupportedAbis>armeabi,armeabi-v7a,x86</AndroidSupportedAbis>
     <AndroidStoreUncompressedFileExtensions />
@@ -126,6 +126,10 @@
       <HintPath>..\..\packages\Xamarin.Forms.2.3.1.114\lib\MonoAndroid10\Xamarin.Forms.Xaml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="XamlSpy, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\XamlSpyLibs.3.0.5\lib\monoandroid50\XamlSpy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -154,8 +158,8 @@
     <Content Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\XFListViewRefresh\XFListViewRefresh.csproj">
-      <Name>XFListViewRefresh</Name>
+    <ProjectReference Include="..\XFXamlSpy\XFXamlSpy.csproj">
+      <Name>XFXamlSpy</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
